--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
       "typeorm": "0.2.37"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start-database": "ts-node database/index.ts",
+      "start-www": "ts-node www/index.ts",
+      "start-gameserver": "ts-node game/index.ts"
    }
 }
