--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,5 +11,6 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
+     "allowSyntheticDefaultImports": true
    }
 }
