--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,11 +1,12 @@
 FROM node:14-alpine
 
-WORKDIR ../../frontend
+WORKDIR /frontend
 
 COPY package*.json ./
 
-RUN ["/bin/bash", "-c", "npm", "install"]
+RUN npm install
 
+COPY . .
 EXPOSE 8080
 
-CMD ['/bin/bash', '-c', 'npm', 'run', 'serve']
+CMD ["npm", "run", "serve"]
