--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,26 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/body-parser": "^1.19.1",
+      "@types/express": "^4.17.13",
+      "@types/multer": "^1.4.7",
       "@types/node": "^8.10.66",
       "ts-node": "^3.3.0",
       "typescript": "^4.4.3"
    },
    "dependencies": {
-      "@types/express": "^4.17.13",
-      "bcrypt": "^5.0.1",
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.19.0",
+      "class-transformer": "^0.3.1",
+      "class-validator": "^0.12.2",
       "express": "^4.17.1",
+      "multer": "^1.4.3",
       "pg": "^8.7.1",
       "reflect-metadata": "^0.1.13",
+      "routing-controllers": "^0.9.0",
       "socket.io": "^4.2.0",
-      "typeorm": "0.2.37"
+      "typeorm": "0.2.37",
+      "uuid": "^8.3.2"
    },
    "scripts": {
       "start-database": "ts-node database/index.ts",
